# mandelbrot-set-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  mandelbrot.cpp  mandelbrot.hpp
MandelbrotViewer/: MandelbrotViewer.sln  MandelbrotViewer.vcxproj
MandelbrotViewer/src/: coordinates.cpp  coordinates.hpp  mandelbrot.cpp  mandelbrot.hpp  win32layer.cpp
src/: CMakeLists.txt  main.cpp  win32layer.cpp
src/engine/: CMakeLists.txt  Coordinates.cpp  Mandelbrot.cpp
src/engine/include/msv/engine/: Coordinates.h  Mandelbrot.h
